--- a/bioinformatics.html
+++ b/bioinformatics.html
@@ -87,10 +87,11 @@
 							</section>
 
 						<!-- Posts -->
+						
 						<h1>
 							Bioinformatics Projects
 						</h1>
-							<section class="posts">
+							<section id="projects" class="posts">
 								<article>
 									<header>
 										<h2><a target="_blank" href="https://academic.oup.com/g3journal/article/4/10/2035/6025633?login=false">Herbicide Resistance in Ipomoea purpurea: De Novo Assembly & Transcriptome Annotation</a></h2>
